--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
+    "postcss": "^8.4.38",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "eslint": "^8",
